--- a/app/src/main/res/layout/first_fragment.xml
+++ b/app/src/main/res/layout/first_fragment.xml
@@ -18,8 +18,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="100dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/white"
@@ -29,8 +30,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="132dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
             android:text="book your tour with us we have many packages to explore the world"
             android:textAllCaps="true"
             android:textColor="@color/white"
@@ -40,12 +42,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
             android:text="Explore now"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:textStyle="bold|normal" />
     </LinearLayout>
 
