--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -25,6 +25,7 @@
             android:textColor="@color/white"
             android:textSize="35dp"
             android:textStyle="bold|normal" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,6 +37,38 @@
             android:textColor="@color/white"
             android:textSize="15dp"
             android:textStyle="bold|normal" />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1"
+            />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1"
+            />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1"
+            />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1"
+            />
 
     </LinearLayout>
 
