--- a/app/src/main/res/layout/second_fragment.xml
+++ b/app/src/main/res/layout/second_fragment.xml
@@ -24,7 +24,8 @@
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="35dp"
-            android:textStyle="bold|normal" />
+            android:textStyle="bold|normal"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,33 +38,34 @@
             android:textColor="@color/white"
             android:textSize="15dp"
             android:textStyle="bold|normal" />
+
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="16dp"
+            app:srcCompat="@drawable/boat1" />
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="16dp"
             app:srcCompat="@drawable/boat1"
             />
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/boat1"
-            />
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/boat1"
-            />
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="16dp"
